# vcnc

./: .gitignore  .p4ignore
api-python/: ChangeLog  LICENSE.txt  README.rst  requirements-3.4.txt  requirements.txt  setup.py  version.json
api-python/documentation/: Makefile  conf.py  index.rst  make.bat  modules.rst  velstor.api.rst  velstor.rst  velstor.vclc.rst
api-python/documentation/clc-user-manual/: clc-consistency.rst  clc-copy.rst  clc-delete.rst  clc-list.rst  clc-mkdir.rst  clc-trq.rst  clc-user-manual.rst  clc-workspace-delete.rst  clc-workspace-get.rst  clc-workspace-list.rst  clc-workspace-set.rst  overview.rst
api-python/tests/: test_sanity.py
api-python/tests/simple/: test_pcapi_volume.py  test_pcapi_workspace.py  test_private_space_cat.py  test_sanity.py
api-python/tests/stress/: test_many_metacopy.py  test_private_space_reads.py
api-python/tests/unit/: test_libutil.py
api-python/velstor/: __init__.py  libtest.py  libutil.py  testlib.py
api-python/velstor/api/: __init__.py  fulfill202.py  grid.py  namespace.py  service.py  session.py  test_workspace_legacy.py  util.py  vp.py  workspace.py  workspace_legacy.py  workspace_preview.py
api-python/velstor/pcapi/: __init__.py  exceptions.py  mount.py  (+3 more)
docs/: .buildinfo  api-reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: api-reference.rst.txt
docs/about-vcnc/: vcnc-architecture.html
docs/api-reference/: modules.html  setup.html  velstor.html  velstor.pcapi.html  velstor.restapi.html  velstor.vclc.html  velstor.vsh.html
docs/developer/: about-this-document.html  coding-policies.html  design-notes.html  documentation-build.html  documentation-publish.html  getting-started.html  ide.html  installing-and-building.html  python-api.html  vclc.html  vcnc-rest.html  vcnc-web.html  workflow.html
docs/foo/: modules.html  setup.html  velstor.html  velstor.pcapi.html  velstor.restapi.html  velstor.vclc.html  velstor.vsh.html
docs/user/: getting-started.html  users-and-security.html  vcnc-clients.html
documentation/: Makefile  conf.py  index.rst
documentation/developer/: coding-policies.rst  documentation-build.rst  documentation-publish.rst  external-build.rst  getting-started.rst  ide.rst  installing-and-building.rst  internal-build.rst
vcnc-core/: README.md  package.json
vcnc-rest/: .eslintrc  ChangeLog  app.js  configure.ac  package.json  play.js
vcnc-rest/addon/: binding.gyp
vcnc-rest/api/: swagger.yaml  v1api.json  v1api.yaml  v2api.json  v2api.yaml
vcnc-rest/config/: vcnc-config.yaml  vcnc-pepsis.conf
vcnc-rest/doc/: Makefile.am  index.md
vcnc-rest/installer/: vcnc-redis.service
vcnc-rest/lib/: configuration.js  fulfill202.js  grid.js  rethink.js  websocket.js
vcnc-rest/routes/: test.js  v1.js  v2.js
vcnc-server/: ChangeLog  Makefile.am  README  configure.ac
vcnc-server/config/: vcnc-config.yaml  velstor-vtrq.conf
vcnc-server/installer/: Makefile.am  vcnc  vcnc-redis.service  vcnc-rethinkdb.service  vcnc.service  velstor-vtrq.service
vcnc-server/js-extension/: Makefile.am  binding.gyp
vcnc-server/js-extension/src/: cncSession.cc
vcnc-server/js-extension/src/cnctrq/: cnctrqClient.cc  cnctrqClient.h  cnctrqDeleteWorker.cc  cnctrqDeleteWorker.h  cnctrqGetattrWorker.cc  cnctrqGetattrWorker.h  cnctrqIcrWaitWorker.cc  cnctrqIcrWaitWorker.h  cnctrqListWorker.cc  cnctrqMetaCopyWorker.cc  cnctrqMkdirWorker.cc  cnctrqShutdownWorker.cc  cnctrqTrqStatisticWorker.cc  cnctrqVPFindWorker.cc  cnctrqVPPropertiesWorker.cc  cnctrqWorkspaceWorker.cc  cnctrqWorkspaceWorker.h
vcnc-server/scripts/: makelib.sh
vcnc-server/vcnc-core/: Makefile.am  README.md  app.js  package.json
vcnc-server/vcnc-core/src/constants/: rethinkdbSchema.js
vcnc-server/vcnc-core/src/lib/: configuration.js  dashboard.js  mockDashboardData.js  mockSampler.js  pollStorageStats.js  rethink.js  websocket.js
vcnc-server/vcnc-rest/: Makefile.am  app.js  package.json
vcnc-server/vcnc-rest/doc/: Makefile.am  index.md
vcnc-server/vcnc-rest/src/api/: v1aapi.yaml  v1api.yaml  v2api.yaml
vcnc-server/vcnc-rest/src/routes/: test.js  v1.js  v1a.js  v2.js
vcnc-server/vcnc-rest/static/: Makefile.am
vcnc-server/vcnc-sampler/: Makefile.am  README.md  app-mock.js  app-test.js  app.js  app_vdaVnc.js  package.json
vcnc-server/vcnc-sampler/src/: vcncSampler.conf.js  velstor-davcnc.conf.js
vcnc-server/vcnc-sampler/src/lib/: JSutils.js  daFileManager.js  daWriteFileStream.js  rethinkSampler-test.js  rethinkSampler.js  vcncSampler-test.js  vcncSampler.conf.js  vcncSampler.js  vcncSamplerUtils.js  vcncSampling-test.js  vcncSampling.js  vcncSampling.js.test  vdaParser.js
vcnc-server/version/: Makefile.am
vcnc-server/version/rev/: Makefile.am
vcnc-web/: .eslintrc  package.json  webpack.config.dev.js  webpack.config.prod.js
vcnc-web/src/: index.ejs  index.js  index.jsx  routes.js  routes.jsx  webpack-public-path.js
vcnc-web/tools/: analyzeBundle.js  build.js  chalkConfig.js  distServer.js  srcServer.js  testCi.js
(+196 files in other folders)
