#
#	'vcnc-server/js-extension' makefile
#
#	Copyright (C) 2015-2017	IC Manage Inc
#
#	See the file 'COPYING' for license information.
#

#
#  Builds the JavaScript (v8) extension that wraps PIDL calls.
#
all:
	(source $(top_srcdir)/scripts/makelib.sh; \
	do_all_gyp $(top_srcdir)/js-extension $(TOOLROOT) $(PROG_NODE_GYP))

clean-local:
	echo TBD
