#
#	'cnc-server/vcnc-sampler' makefile
#
#	Copyright (C) 2015	IC Manage Inc
#
#	See the file 'COPYING' for license information.
#

#
#  Builds the vcnc-sampler libraries and component
#
all:
	(source $(top_srcdir)/scripts/makelib.sh;    \
	 do_all $(top_srcdir)/vcnc-sampler $(TOOLROOT))

clean-local:
	echo TBD
